ASUSFETest/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship field to the Contact record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geomarket_Code__c</fullName>
        <label>Geomarket Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>2YR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4YR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Code__c</fullName>
        <label>PeopleSoft Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user assigned as the current Territory Manager for this Institution.</inlineHelpText>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>PeopleSoft_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>External_Mastered_Contact</fullName>
        <active>true</active>
        <description>Reciprocal Account record that is updated from an external source; the system of record is an external database.</description>
        <label>External Mastered Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Mastered_Org</fullName>
        <active>true</active>
        <description>Account record that is updated from an external source; the system of record is an external database.</description>
        <label>External Mastered Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Mastered_Contact</fullName>
        <active>true</active>
        <description>Reciprocal Account record that exists only in Salesforce and is not updated from an external source</description>
        <label>SF Mastered Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Mastered_Org</fullName>
        <active>true</active>
        <description>Account record that exists only in Salesforce and is not updated from an external source</description>
        <label>SF Mastered Org</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>